# hope

./: .gitignore  .gitmodules  README.md  build-dracopy.ps1  requirements.txt
Client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Client/public/: bunny.drc
Client/public/dracoCustom/: draco_decoder.js  draco_decoder.wasm
Client/src/: FreeRoamController.ts  cuda_worker.ts  dracoDecoder.ts  gpu_pc_renderer.ts  gpu_pc_renderer_ws.ts  main.ts  main_wrtc.ts  main_ws.ts  perf_csv_export.ts  transmissionWS.ts  transmissionWebRTC.ts  types.ts  worker.ts
Client/src/draw-call-inspector/: DrawCallInspector.min.js  draw_call_inspector_wrapper.js
Client/src/types/: draco_decoder.d.ts
Client/src/wrappers/: decode_wrapper.cpp
addons/gesture_recognition/: pyproject.toml  requirements.txt
addons/gesture_recognition/src/gesture_recognition/: __init__.py  point_gesture_recognizer.py
addons/gesture_recognition/src/gesture_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
addons/onxx/scripts/: README.md  demo_camera.py  demo_object_detection.py  demo_realsense_segment.py  demo_sam2_object_detection.py  demo_yoloe.py  hand_tracking.py  opencv_pointcloud_viewer.py  pyglet_pointcloud_viewer2.py  sam2_camera_predictor.py  sam2_config.py
addons/onxx/scripts/gesture_recognition/: README.MD  finger_detection.py  gesture_recognition.py  point_gesture_recognizer.py  realsense.py  requirements.txt  run.py  run_real_sense.py  run_webcam.py  test.bag
producer/: CMakeLists.txt  cuda_quantizer.py  hope_server.py  offline_compression.py  point_gesture_recognizer.py  producer.py  producer_cli.py  requirements.txt  sam2_camera_predictor.py  sam3_camera_predictor.py  sam3_test.py  websocket_server.py
producer/rsrc/certs/: server.crt  server.key
producer/src/: README.md  broadcasting.py  cuda_quantizer.py  draco_wrapper.py  encoding.py  hope_server.py  producer.cpp  producer.py  producer_cli.py  recording.py  sam2_camera_predictor.py  sam3_camera_predictor.py  stats.py  statslogger.py  utils.py  websocket_server.py
producer/src/Headers/: Detector.h  Encoder.h  Enums.h  Structs.h  Util.hpp
producer/src/Source/: Detector.cpp  Encoder.cpp  producer.cpp
producer/src/bindings/: draco_bindings.cpp  module_broadcaster.cpp  server_bindings.cpp  server_bindings_no_nanobind.cpp  server_main.cpp
producer/src/bindings/csv_entry/: csv_entry.hpp  csv_entry_bindings.cpp  csv_entry_bindings.hpp
producer/src/bindings/packets/: broadcast_info.hpp  client_supplied_metrics.hpp
producer/src/bindings/server/: client_metrics_and_csv_entry.hpp  pending_metadata.hpp  pending_ping.hpp  server.cpp  server.hpp  server_bindings.cpp  server_bindings.hpp
producer/src/bindings/time_types/: time_types.hpp
producer/src/broadcaster/: broadcasting.py
producer/src/broadcaster_wrapper/: README.MD  __init__.py  broadcasting.py  send_times.csv  server.crt  server.key
producer/src/broadcaster_wrapper/cert/: myCA.key  myCA.pem  server.crt  server.csr  server.ext  server.key
producer/src/broadcaster_wrapper/client_dist/dracoCustom/: Readme.md
producer/src/draco_wrapper/: __init__.py  draco_wrapper.py  encoder.ilk  main.py
producer/src/stats/: __init__.py  stats.py  stats_full.csv  stats_full_performance.csv  stats_full_quality.csv  stats_importance.csv  stats_importance_performance.csv  stats_importance_quality.csv  stats_none.csv  stats_none_performance.csv
producer/src/testbed/: bench.yaml  config_runner.py  file_bencher.py  main.py  yaml_config_reader.py
