[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture_recognition"
version = "0.1.0"
description = "Point Gesture Recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gesture_recognition*"]
